--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ejercicios XD</title>
 </head>
 <body>
-    <h1>Ejercicios para el Hackaton</h1>
+    <h1>Ejercicios de lógica</h1>
 </body>
     <script src="./index.js"></script>
 </html>
